added some basic info to file

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>About Rusty</title>
+
+	<style type="text/css"></style>
 </head>
 <body>
 
