added one css selector

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -3,9 +3,27 @@
 <head>
 	<title>About Rusty</title>
 
-	<style type="text/css"></style>
+	<style type="text/css">
+		/*slector {
+			property: value;
+			}*/
+
+		h1 {
+			color: purple;
+		}
+
+	</style>
 </head>
 <body>
+	<h1>About My Dog</h1>
+
+	<h4>My dogs hobbies</h4>
+
+	<ul>
+		<li>Sleeping</li>
+		<li>Walking</li>
+		<li>Smelling</li>
+	</ul>
 
 </body>
 </html>
