added a separate stylesheet

--- a/aboutMe.html
+++ b/aboutMe.html
@@ -3,7 +3,9 @@
 <head>
 	<title>About Rusty</title>
 
-	<style type="text/css">
+	<link rel="stylesheet" type="text/css" href="app.css">
+
+<!-- 	<style type="text/css">
 		/*slector {
 			property: value;
 			}*/
@@ -12,7 +14,17 @@
 			color: purple;
 		}
 
-	</style>
+		li {
+			color: orange;
+		}
+
+		h4 {
+			color: blue;
+		}
+
+	</style> -->
+
+	
 </head>
 <body>
 	<h1>About My Dog</h1>
